// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components Container 1`] = `
<div
  className="container-fluid"
>
  Lorem ipsum dolor met.
</div>
`;

exports[`Storyshots Components Loader 1`] = `
<div
  className="loader"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Storyshots Components Main Nav 1`] = `
<ul
  className="nav flex-column nav-main"
>
  <li
    className="nav-item"
  >
    <a
      aria-current="page"
      className="nav-link active"
      href="#/"
      onClick={[Function]}
    >
      <i
        className="icon fas fa-home fa-fw"
      />
      Dashboard
    </a>
    <ul
      className="nav nav-sub flex-column"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#/home/analytics"
          onClick={[Function]}
        >
          Analytics
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#/home/checks"
          onClick={[Function]}
        >
          System checks
        </a>
      </li>
    </ul>
  </li>
  <li
    className="nav-item"
  >
    <a
      className="nav-link"
      href="#/users"
      onClick={[Function]}
    >
      <i
        className="icon fas fa-users fa-fw"
      />
      Users
    </a>
    <ul
      className="nav nav-sub flex-column"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#/users/groups"
          onClick={[Function]}
        >
          Groups
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="#/users/bans"
          onClick={[Function]}
        >
          Bans
        </a>
      </li>
    </ul>
  </li>
  <li
    className="nav-item"
  >
    <a
      className="nav-link"
      href="#/categories"
      onClick={[Function]}
    >
      <i
        className="icon fas fa-sitemap fa-fw"
      />
      Categories
    </a>
  </li>
  <li
    className="nav-item"
  >
    <a
      className="nav-link"
      href="#/themes"
      onClick={[Function]}
    >
      <i
        className="icon fas fa-paint-brush fa-fw"
      />
      Themes
    </a>
  </li>
  <li
    className="nav-item"
  >
    <a
      className="nav-link"
      href="#/attachments"
      onClick={[Function]}
    >
      <i
        className="icon fas fa-paperclip fa-fw"
      />
      Attachments
    </a>
  </li>
  <li
    className="nav-item"
  >
    <a
      className="nav-link"
      href="#/settings"
      onClick={[Function]}
    >
      <i
        className="icon fas fa-cog fa-fw"
      />
      Settings
    </a>
  </li>
</ul>
`;

exports[`Storyshots Components Navbar 1`] = `
<nav
  className="navbar navbar-expand"
>
  <div
    className="container-fluid"
  >
    <div
      className="row w-100"
    >
      <div
        className="col-side"
      >
        [MISAGO]
      </div>
      <div
        className="col-main d-flex justify-content-end align-items-center"
      >
        <span
          className="navbar-text me-3"
        >
          Sephiroth
        </span>
        <button
          className="btn btn-light btn-sm has-text"
          onClick={[Function]}
          type="button"
        >
          Logout
        </button>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Components Spinner 1`] = `
<span
  className="spinner-border spinner-border-sm"
  role="status"
/>
`;

exports[`Storyshots Components/Alert Error 1`] = `
<div
  className="alert alert-danger"
  role="alert"
>
  A simple error alert with
   
  <a
    className="alert-link"
    href="#"
  >
    an example link
  </a>
  . Give it a click if you like.
</div>
`;

exports[`Storyshots Components/Alert Info 1`] = `
<div
  className="alert alert-info"
  role="alert"
>
  A simple info alert with
   
  <a
    className="alert-link"
    href="#"
  >
    an example link
  </a>
  . Give it a click if you like.
</div>
`;

exports[`Storyshots Components/Alert Success 1`] = `
<div
  className="alert alert-success"
  role="alert"
>
  A simple success alert with
   
  <a
    className="alert-link"
    href="#"
  >
    an example link
  </a>
  . Give it a click if you like.
</div>
`;

exports[`Storyshots Components/Alert Warning 1`] = `
<div
  className="alert alert-warning"
  role="alert"
>
  A simple danger alert with
   
  <a
    className="alert-link"
    href="#"
  >
    an example link
  </a>
  . Give it a click if you like.
</div>
`;

exports[`Storyshots Components/Button Danger 1`] = `
<button
  className="btn btn-danger has-text"
  disabled={false}
  type="submit"
>
  Danger button
</button>
`;

exports[`Storyshots Components/Button Light 1`] = `
<button
  className="btn btn-light has-text"
  disabled={false}
  type="submit"
>
  Light button
</button>
`;

exports[`Storyshots Components/Button Only Icon 1`] = `
<button
  className="btn btn-primary"
  disabled={false}
  type="submit"
>
  <i
    className="icon far fa-message fa-fw"
  />
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<button
  className="btn btn-primary has-text"
  disabled={false}
  type="submit"
>
  Primary button
</button>
`;

exports[`Storyshots Components/Button Success 1`] = `
<button
  className="btn btn-success has-text"
  disabled={false}
  type="submit"
>
  Success button
</button>
`;

exports[`Storyshots Components/Button With Icon 1`] = `
<button
  className="btn btn-primary has-text"
  disabled={false}
  type="submit"
>
  <i
    className="icon far fa-message fa-fw"
  />
  With icon
</button>
`;

exports[`Storyshots Components/Card Minimal 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    This is some text within a card body
  </div>
</div>
`;

exports[`Storyshots Components/Card With Header And Footer 1`] = `
<div
  className="card"
>
  <div
    className="card-header"
  >
    <strong
      className="card-title"
    >
      Card Title
    </strong>
  </div>
  <div
    className="card-body"
  >
    This is some text within a card body
  </div>
  <div
    className="card-footer"
  >
    Card Footer
  </div>
</div>
`;

exports[`Storyshots Components/ClientError Application Error 1`] = `"{\\"location\\":\\"__root__\\",\\"type\\":\\"client_error.graphql\\",\\"message\\":\\"Unexpected error has occurred.\\"}"`;

exports[`Storyshots Components/ClientError Network Error 1`] = `"{\\"location\\":\\"__root__\\",\\"type\\":\\"client_error.network\\",\\"message\\":\\"Site server can't be reached.\\"}"`;

exports[`Storyshots Components/Controls Checkbox 1`] = `
<input
  checked={false}
  className="form-check-input"
  disabled={false}
  type="checkbox"
/>
`;

exports[`Storyshots Components/Controls Email Input 1`] = `
<input
  className="form-control"
  disabled={false}
  placeholder="Enter your e-mail..."
  type="email"
  value=""
/>
`;

exports[`Storyshots Components/Controls File Input 1`] = `
<input
  accept="image/*"
  className="form-control"
  disabled={false}
  type="file"
/>
`;

exports[`Storyshots Components/Controls Number Input 1`] = `
<input
  className="form-control"
  disabled={false}
  placeholder="Enter your age..."
  type="number"
  value=""
/>
`;

exports[`Storyshots Components/Controls Password Input 1`] = `
<input
  className="form-control"
  disabled={false}
  placeholder="Enter your password.."
  type="password"
  value=""
/>
`;

exports[`Storyshots Components/Controls Radio Select 1`] = `
<div
  className="form-check-select"
>
  <div
    className="form-check"
  >
    <input
      checked={false}
      className="form-check-input"
      disabled={false}
      id="undefined_user"
      type="radio"
      value="user"
    />
    <label
      className="form-check-label"
      htmlFor="undefined_user"
    >
      User
    </label>
  </div>
  <div
    className="form-check"
  >
    <input
      checked={true}
      className="form-check-input"
      disabled={false}
      id="undefined_mod"
      type="radio"
      value="mod"
    />
    <label
      className="form-check-label"
      htmlFor="undefined_mod"
    >
      Moderator
    </label>
  </div>
  <div
    className="form-check"
  >
    <input
      checked={false}
      className="form-check-input"
      disabled={false}
      id="undefined_admin"
      type="radio"
      value="admin"
    />
    <label
      className="form-check-label"
      htmlFor="undefined_admin"
    >
      Admin
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Controls Select 1`] = `
<select
  className="form-control"
  disabled={false}
  value=""
>
  <option
    value=""
  >
    
  </option>
  <option
    value="user"
  >
    User
  </option>
  <option
    value="mod"
  >
    Moderator
  </option>
  <option
    value="admin"
  >
    Admin
  </option>
</select>
`;

exports[`Storyshots Components/Controls Select Multiple 1`] = `
<div
  className="form-select-multiple"
>
  <div
    className="form-check"
  >
    <input
      checked={true}
      className="form-check-input"
      disabled={false}
      id="undefined_user"
      type="checkbox"
      value="user"
    />
    <label
      className="form-check-label"
      htmlFor="undefined_user"
    >
      User
    </label>
  </div>
  <div
    className="form-check"
  >
    <input
      checked={false}
      className="form-check-input"
      disabled={false}
      id="undefined_mod"
      type="checkbox"
      value="mod"
    />
    <label
      className="form-check-label"
      htmlFor="undefined_mod"
    >
      Moderator
    </label>
  </div>
  <div
    className="form-check"
  >
    <input
      checked={true}
      className="form-check-input"
      disabled={false}
      id="undefined_admin"
      type="checkbox"
      value="admin"
    />
    <label
      className="form-check-label"
      htmlFor="undefined_admin"
    >
      Admin
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Controls Text Area Input 1`] = `
<textarea
  className="form-control"
  disabled={false}
  placeholder="Enter your story..."
  rows={5}
  value=""
/>
`;

exports[`Storyshots Components/Controls Text Input 1`] = `
<input
  className="form-control"
  disabled={false}
  placeholder="Enter your username..."
  type="text"
  value=""
/>
`;

exports[`Storyshots Components/Form Card Complex 1`] = `
<div
  className="card form-card"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="card-header form-card-header"
    >
      <strong
        className="card-title form-card-title"
      >
        Edit User
      </strong>
    </div>
    <div
      className="card-body form-card-fieldset"
    >
      <fieldset>
        <legend
          className="form-card-legend"
        >
          Basic Details
        </legend>
        <div
          className="form-row"
        >
          <label
            className="form-label"
            htmlFor="form-control-username"
          >
            Username
          </label>
          <input
            aria-describedby="form-help-username"
            className="form-control"
            id="form-control-username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
          />
          <div
            className="form-text"
            id="form-help-username"
          >
            Your user name must be 4-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
          </div>
        </div>
        <div
          className="form-row"
        >
          <label
            className="form-label"
            htmlFor="form-control-title"
          >
            Title
            <span
              className="badge bg-light text-dark"
            >
              Optional
            </span>
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="form-control-title"
            name="title"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
          />
        </div>
        <div
          className="form-row"
        >
          <label
            className="form-label"
            htmlFor="form-control-description"
          >
            Description
            <span
              className="badge bg-light text-dark"
            >
              Optional
            </span>
          </label>
          <textarea
            aria-describedby=""
            className="form-control"
            id="form-control-description"
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            rows={5}
          />
        </div>
      </fieldset>
    </div>
    <div
      className="card-body form-card-fieldset"
    >
      <fieldset>
        <legend
          className="form-card-legend"
        >
          Sign In Credentials
        </legend>
        <div
          className="form-row"
        >
          <label
            className="form-label"
            htmlFor="form-control-email"
          >
            E-mail address
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="form-control-email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
          />
        </div>
        <div
          className="form-row"
        >
          <label
            className="form-label"
            htmlFor="form-control-password"
          >
            New password
            <span
              className="badge bg-light text-dark"
            >
              Optional
            </span>
          </label>
          <input
            aria-describedby="form-help-password"
            className="form-control"
            id="form-control-password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
          />
          <div
            className="form-text"
            id="form-help-password"
          >
            To change user password enter new password here.
          </div>
        </div>
      </fieldset>
    </div>
    <div
      className="card-body form-card-fieldset"
    >
      <fieldset>
        <legend
          className="form-card-legend"
        >
          Permissions
        </legend>
        <div
          className="form-row"
        >
          <label
            className="form-label"
            htmlFor="form-control-group"
          >
            Primary group
          </label>
          <select
            aria-describedby="form-help-group"
            className="form-control"
            id="form-control-group"
            name="group"
            onBlur={[Function]}
            onChange={[Function]}
          >
            <option
              value="user"
            >
              Users
            </option>
            <option
              value="mod"
            >
              Moderators
            </option>
            <option
              value="admin"
            >
              Administrators
            </option>
          </select>
          <div
            className="form-text"
            id="form-help-group"
          >
            Primary group for this user. Affects the way user is displayed.
          </div>
        </div>
        <div
          className="form-row"
        >
          <label
            className="form-label"
            htmlFor="form-control-groups"
          >
            Group memberships
          </label>
          <div
            className="form-select-multiple"
          >
            <div
              className="form-check"
            >
              <input
                className="form-check-input"
                id="form-control-groups_user"
                name="groups"
                onBlur={[Function]}
                onChange={[Function]}
                type="checkbox"
                value="user"
              />
              <label
                className="form-check-label"
                htmlFor="form-control-groups_user"
              >
                Users
              </label>
            </div>
            <div
              className="form-check"
            >
              <input
                className="form-check-input"
                id="form-control-groups_mod"
                name="groups"
                onBlur={[Function]}
                onChange={[Function]}
                type="checkbox"
                value="mod"
              />
              <label
                className="form-check-label"
                htmlFor="form-control-groups_mod"
              >
                Moderators
              </label>
            </div>
            <div
              className="form-check"
            >
              <input
                className="form-check-input"
                id="form-control-groups_admin"
                name="groups"
                onBlur={[Function]}
                onChange={[Function]}
                type="checkbox"
                value="admin"
              />
              <label
                className="form-check-label"
                htmlFor="form-control-groups_admin"
              >
                Administrators
              </label>
            </div>
          </div>
          <div
            className="form-text"
            id="form-help-groups"
          >
            Select other groups this user is member of.
          </div>
        </div>
        <div
          className="form-row"
        >
          <div
            className="form-check"
          >
            <input
              aria-describedby="form-help-mod"
              className="form-check-input"
              id="form-control-mod"
              name="mod"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="form-control-mod"
            >
              Global moderator
            </label>
          </div>
          <div
            className="form-text"
            id="form-help-mod"
          >
            Global moderator can moderate entire site without need for explicit moderator permissions.
          </div>
        </div>
        <div
          className="form-row"
        >
          <div
            className="form-check"
          >
            <input
              aria-describedby="form-help-admin"
              className="form-check-input"
              id="form-control-admin"
              name="admin"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="form-control-admin"
            >
              Root administrator
            </label>
          </div>
          <div
            className="form-text"
            id="form-help-admin"
          >
            Root administrator status can only be removed by other root admins.
          </div>
        </div>
      </fieldset>
    </div>
    <div
      className="card-footer form-card-footer"
    >
      <button
        className="btn btn-primary has-text"
        type="submit"
      >
        Save changes
      </button>
    </div>
  </form>
</div>
`;

exports[`Storyshots Components/Form Card Minimal 1`] = `
<div
  className="card form-card"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="card-header form-card-header"
    >
      <strong
        className="card-title form-card-title"
      >
        Edit User
      </strong>
    </div>
    <div
      className="card-body form-card-body"
    >
      <div
        className="form-row"
      >
        <label
          className="form-label"
          htmlFor="form-control-username"
        >
          Username
        </label>
        <input
          aria-describedby="form-help-username"
          className="form-control"
          id="form-control-username"
          name="username"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
        <div
          className="form-text"
          id="form-help-username"
        >
          Your user name must be 4-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
        </div>
      </div>
      <div
        className="form-row"
      >
        <label
          className="form-label"
          htmlFor="form-control-email"
        >
          E-mail address
        </label>
        <input
          aria-describedby=""
          className="form-control"
          id="form-control-email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <div
        className="form-row"
      >
        <label
          className="form-label"
          htmlFor="form-control-title"
        >
          Title
          <span
            className="badge bg-light text-dark"
          >
            Optional
          </span>
        </label>
        <input
          aria-describedby=""
          className="form-control"
          id="form-control-title"
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <div
      className="card-footer form-card-footer"
    >
      <button
        className="btn btn-primary has-text"
        type="submit"
      >
        Save changes
      </button>
    </div>
  </form>
</div>
`;

exports[`Storyshots Components/Form Checkbox Field 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-checked"
    >
      Example field
    </label>
    <input
      aria-describedby=""
      className="form-check-input"
      id="form-control-checked"
      name="checked"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form Checkbox Field With Label 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-checked"
    >
      Example field
    </label>
    <div
      className="form-check"
    >
      <input
        aria-describedby=""
        className="form-check-input"
        id="form-control-checked"
        name="checked"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="form-control-checked"
      >
        Accept terms and services
      </label>
    </div>
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form Disabled 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-message"
    >
      Example field
    </label>
    <input
      aria-describedby=""
      className="form-control"
      disabled={true}
      id="form-control-message"
      name="message"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form File Input Field 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-file"
    >
      Example field
    </label>
    <input
      accept="image/*"
      aria-describedby=""
      className="form-control"
      id="form-control-file"
      name="file"
      onBlur={[Function]}
      onChange={[Function]}
      type="file"
    />
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form Number Input Field 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-age"
    >
      Example field
    </label>
    <input
      aria-describedby=""
      className="form-control"
      id="form-control-age"
      name="age"
      onBlur={[Function]}
      onChange={[Function]}
      type="number"
    />
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form Radio Select Field 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-choice"
    >
      Example field
    </label>
    <div
      className="form-check-select"
    >
      <div
        className="form-check"
      >
        <input
          className="form-check-input"
          id="form-control-choice_user"
          name="choice"
          onBlur={[Function]}
          onChange={[Function]}
          type="radio"
          value="user"
        />
        <label
          className="form-check-label"
          htmlFor="form-control-choice_user"
        >
          User
        </label>
      </div>
      <div
        className="form-check"
      >
        <input
          className="form-check-input"
          id="form-control-choice_mod"
          name="choice"
          onBlur={[Function]}
          onChange={[Function]}
          type="radio"
          value="mod"
        />
        <label
          className="form-check-label"
          htmlFor="form-control-choice_mod"
        >
          Moderator
        </label>
      </div>
      <div
        className="form-check"
      >
        <input
          className="form-check-input"
          id="form-control-choice_admin"
          name="choice"
          onBlur={[Function]}
          onChange={[Function]}
          type="radio"
          value="admin"
        />
        <label
          className="form-check-label"
          htmlFor="form-control-choice_admin"
        >
          Administrator
        </label>
      </div>
    </div>
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form Select Field 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-choice"
    >
      Example field
    </label>
    <select
      aria-describedby=""
      className="form-control"
      id="form-control-choice"
      name="choice"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value=""
      >
        
      </option>
      <option
        value="user"
      >
        User
      </option>
      <option
        value="mod"
      >
        Moderator
      </option>
      <option
        value="admin"
      >
        Administrator
      </option>
    </select>
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form Select Multiple Field 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-choices"
    >
      Example field
    </label>
    <div
      className="form-select-multiple"
    >
      <div
        className="form-check"
      >
        <input
          className="form-check-input"
          id="form-control-choices_user"
          name="choices"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
          value="user"
        />
        <label
          className="form-check-label"
          htmlFor="form-control-choices_user"
        >
          User
        </label>
      </div>
      <div
        className="form-check"
      >
        <input
          className="form-check-input"
          id="form-control-choices_mod"
          name="choices"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
          value="mod"
        />
        <label
          className="form-check-label"
          htmlFor="form-control-choices_mod"
        >
          Moderator
        </label>
      </div>
      <div
        className="form-check"
      >
        <input
          className="form-check-input"
          id="form-control-choices_admin"
          name="choices"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
          value="admin"
        />
        <label
          className="form-check-label"
          htmlFor="form-control-choices_admin"
        >
          Administrator
        </label>
      </div>
    </div>
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form Text Area Input Field 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-message"
    >
      Example field
    </label>
    <textarea
      aria-describedby=""
      className="form-control"
      id="form-control-message"
      name="message"
      onBlur={[Function]}
      onChange={[Function]}
      rows={5}
    />
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form Text Input Field 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-message"
    >
      Example field
    </label>
    <input
      aria-describedby=""
      className="form-control"
      id="form-control-message"
      name="message"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Form Text Input Field Full Example 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-row"
  >
    <label
      className="form-label"
      htmlFor="form-control-message"
    >
      Username
      <span
        className="badge bg-light text-dark"
      >
        Optional
      </span>
    </label>
    <input
      aria-describedby="form-help-message"
      className="form-control"
      id="form-control-message"
      name="message"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
    <div
      className="form-text"
      id="form-help-message"
    >
      Your user name must be 4-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
    </div>
  </div>
  <hr />
  <button
    className="btn btn-primary has-text"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots Components/Header Basic 1`] = `
<div
  className="page-header"
>
  <h1>
    Page header
  </h1>
</div>
`;

exports[`Storyshots Components/Header With Parent 1`] = `
<div
  className="page-header"
>
  <div
    className="page-header-parent"
  >
    <a
      href="#/parent"
      onClick={[Function]}
    >
      Parent title
      <i
        className="icon fas fa-chevron-right"
      />
    </a>
  </div>
  <h1>
    Page header
  </h1>
</div>
`;

exports[`Storyshots Components/Icon Fixed Width 1`] = `
Array [
  <i
    className="icon fas fa-address-card fa-fw"
  />,
  <br />,
  <i
    className="icon far fa-lemon fa-fw"
  />,
  <br />,
  <i
    className="icon far fa-square-check fa-fw"
  />,
  <br />,
  <i
    className="icon fas fa-bandage fa-fw"
  />,
]
`;

exports[`Storyshots Components/Icon Regular 1`] = `
<i
  className="icon far fa-address-card"
/>
`;

exports[`Storyshots Components/Icon Solid 1`] = `
<i
  className="icon fas fa-address-card"
/>
`;

exports[`Storyshots Components/Toasts Error Toast 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  className="toast fade show toast-danger"
  role="alert"
>
  <div
    className="toast-layout"
  >
    <div
      className="toast-body"
    >
      Oops! Something wrong has happened!
    </div>
    <button
      aria-label="Close"
      className="btn-close btn-close-white"
      type="button"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Toasts Success Toast 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  className="toast fade show toast-success"
  role="alert"
>
  <div
    className="toast-layout"
  >
    <div
      className="toast-body"
    >
      Hello world!
    </div>
    <button
      aria-label="Close"
      className="btn-close btn-close-white"
      type="button"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Toasts Toasts provider 1`] = `
Array [
  <div
    className="toast-container"
  />,
  <input
    className="form-control"
    onChange={[Function]}
    type="text"
    value="Hello world!"
  />,
  <br />,
  <button
    className="btn btn-success has-text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Primary
  </button>,
  " ",
  <button
    className="btn btn-danger has-text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Error
  </button>,
]
`;

exports[`Storyshots Layouts Full 1`] = `
<div
  className="layout-full"
>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col-side"
      >
        <ul
          className="nav flex-column nav-main"
        >
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              href="#/"
              onClick={[Function]}
            >
              <i
                className="icon fas fa-home fa-fw"
              />
              Dashboard
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="#/settings"
              onClick={[Function]}
            >
              <i
                className="icon fas fa-cog fa-fw"
              />
              Settings
            </a>
            <ul
              className="nav nav-sub flex-column"
            >
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#/settings/general"
                  onClick={[Function]}
                >
                  General settings
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        className="col-main"
      >
        <div
          className="card"
        >
          <div
            className="card-body"
          >
            <h5
              className="card-title"
            >
              Full Layout
            </h5>
            <p
              className="card-text"
            >
              Used for authenticated users.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layouts Minimal 1`] = `
<div
  className="layout-minimal"
>
  <div
    className="container-fluid"
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        <h5
          className="card-title"
        >
          Minimal Layout
        </h5>
        <p
          className="card-text"
        >
          Used when user is not authenticated.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages Loading Page 1`] = `
<div
  className="layout-minimal"
>
  <div
    className="container-fluid"
  >
    <div
      className="page-loading"
    />
  </div>
</div>
`;

exports[`Storyshots Pages Login Page 1`] = `
<div
  className="layout-minimal"
>
  <div
    className="container-fluid"
  >
    <div
      className="login-form-logo"
    />
    <div
      className="card login-form-card"
    >
      <div
        className="card-body"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="login-form-grid"
          >
            <input
              className="form-control"
              disabled={false}
              name="username"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Username or e-mail"
              type="text"
            />
            <input
              className="form-control"
              disabled={false}
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Password"
              type="password"
            />
            <button
              className="btn btn-primary has-text"
              disabled={false}
              type="submit"
            >
              Continue
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
